# litxbench

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: README.md  conf.py  index.rst  leaderboard.rst  transcribe.md
docs/_static/: custom.css  leaderboard.js
docs/_templates/sidebar/: explorer-link.html
docs/about/: contributing.rst  license.rst
docs/api/: enums.rst  eval.rst  index.rst  models.rst  units.rst  utils.rst
docs/user/: advanced_usage.rst  building_extractions.rst  core_concepts.rst  dataset.rst  evaluation.rst  introduction.rst
examples/: usage.py
scripts/: ast_to_graph.py  transcribe_and_extract.py  transcribe_pdfs.py
scripts/paper/: create_knowmat2_run_meta.py  eval_all_zero_shot.py  eval_lematsynth.py  generate_prompts.py  litx_alloy_stats.py  pareto_front.py  prompts.py  prompts_llm_gen.py  question_each_paper.py  run_experiments.py  test_cli_commands.py  view_diffs.py
scripts/paper/code_figures/: material.py  ruff.toml
scripts/paper/combined_results/: agentic_cli_run1.csv  agentic_cli_run2.csv  agentic_cli_run3.csv  assemble_graph_run1.csv  assemble_graph_run2.csv  assemble_graph_summary.csv  composition_string_vs_code.csv  json_vs_code_comparison.csv  knowmat2_run1.csv  knowmat2_run2.csv  knowmat2_run3.csv  process_f1_summary.csv  property_summary_gemini_3.1_pro.csv  zero_shot_json_run1.csv  zero_shot_linear_run1.csv  zero_shot_run1.csv  zero_shot_run2.csv  zero_shot_run3.csv  zero_shot_summary_with_ci.csv
scripts/paper/mpea/: compare_mpea.py  find_mpea_errors.py  (+1 more)
src/litxbench/: __init__.py
tests/: test_eval.py  test_experiment_validation.py  test_hallucination.py  test_measurement_descriptions_validation.py  test_process_step.py  test_serialization.py  test_synthesis_group.py  test_utils.py
ui/: README.md  build-static.sh  next.config.ts  package-lock.json  package.json
(+97 files in other folders)
