[project]
name = "litxbench"
version = "0.1.0"
description = "A Benchmark for Information Extraction From Scientific Literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymatgen>=2025.10.7",
    "pydantic>=2.12.5",
    "pint>=0.25.2",
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
maintainers = [
    { name="Curtis Chong", email="cchong@radical-ai.com" }
]

[project.urls]
Homepage = "https://radical-ai.github.io/litxbench"
Issues = "https://github.com/Radical-AI/litxbench/issues"

[project.optional-dependencies]
dev = [
    "prek>=0.3.4",
    "pytest>=8",
    "ruff>=0.14",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-copybutton",
    "sphinx-design",
]
paper = [
    "pydantic-ai>=1.39.0",
    "logfire>=0.4.0",
    "matplotlib",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[tool.ruff.lint.per-file-ignores]
"examples/usage.py" = ["E402"] # ignore imports not being at the top of file for clarity

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = [".", "src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/litxbench/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = ["src/litxbench/litxalloy/pdfs/*.pdf"]

[tool.hatch.build.targets.wheel]
packages = ["src/litxbench"]
exclude = ["src/litxbench/litxalloy/pdfs/*.pdf"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
exclude = ["paper"]

[tool.ruff]
line-length = 120
